# sounds

./: CHANGELOG.md  LICENSE  cabal.project  shell.nix  sounds.cabal
exe/: Main.hs
